[package]
name = "castcoin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI for mining Castcoin on Base network using proof-of-work."
homepage = "https://castcoinbase.xyz"
repository = "https://github.com/castcoinbase/castcoin-cli"
readme = "./README.md"
keywords = ["base", "crypto", "mining", "evm"]

[[bin]]
name = "castcoin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
ethers = "2.0.10"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
colored = "2.0"
indicatif = "0.17.8"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
panic = 'abort'
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
